<resources>
    <string name="app_name">Breakdown Assist</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John</string>

    <string name="pref_title_area_name">Area Name</string>
    <string name="pref_default_area_name">Homagama</string>

    <string name="pref_title_areacode1">Area Code 1</string>
    <string name="pref_default_areacode1">41</string>

    <string name="pref_title_areacode2">Area Code 2</string>
    <string name="pref_default_areacode2">42</string>

    <string name="pref_title_areacode3">Area Code 3</string>
    <string name="pref_default_areacode3">71</string>

    <string name="pref_title_night_mode">Night Mode</string>
    <string-array name="pref_night_mode_list_titles">
        <item>Automatic</item>
        <item>Always</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_night_mode_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_show_traffic">Show Live Traffic on the Map</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string-array name="failure_type">
        <item>Please select</item>
        <item>Service Main System</item>
        <item>Low Voltage System</item>
        <item>Medium Voltage System</item>
    </string-array>

    <string-array name="failure_type_index">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="failure_nature">
        <item>Please select</item>
        <item>MCCB/ Fuse/ Cut-out blown</item>
        <item>Meter terminal blown</item>
        <item>Service wire broken</item>
    </string-array>

    <string-array name="failure_nature_index">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="failure_cause">
        <item>Please select</item>
        <item>Way-leaves</item>
        <item>Overload</item>
        <item>Loose Connection</item>
        <item>Animals</item>
    </string-array>

    <string-array name="failure_cause_index">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="menu_settings">Settings</string>
</resources>
