<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_area_name"
        android:inputType="textCapWords"
        android:key="area_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_area_name" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_areacode1"
        android:inputType="number"
        android:key="areacode1"
        android:maxLines="1"
        android:maxLength="2"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_areacode1" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_areacode2"
        android:inputType="number"
        android:key="areacode2"
        android:maxLines="1"
        android:maxLength="2"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_areacode2" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_areacode3"
        android:inputType="number"
        android:key="areacode3"
        android:maxLines="1"
        android:maxLength="2"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_areacode3" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_night_mode_list_titles"
        android:entryValues="@array/pref_night_mode_list_values"
        android:key="night_mode"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_night_mode" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="traffic"
        android:title="@string/pref_title_show_traffic"/>


</PreferenceScreen>
